# inspired-by-bot

./: README.md  pyproject.toml  requirements.txt  run.py  slackbot_settings.py
plugins/: plugin.py  scrap.py  scraping.py  utils.py
tests/: test_yamaguchi.py
