[tool.poetry]
name = "yamaguchi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]


[tool.poetry.dependencies]
python = "^3.7"
slackbot = "^0.5.6"
python-dotenv = "^0.13.0"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
